[package]
name = "Nucleus"
version = "0.1.0"
edition = "2024"

[dependencies]
# We split 'unistd' into 'fs' (for chroot/chdir) and 'process' (for execvp)
nix = { version = "0.27.1", features = ["sched", "mount", "hostname", "process", "fs", "user", "term"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
caps = "0.5"
